# coder-eval-cli

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
src/coder_eval/: __init__.py  cli.py  docker_utils.py  evaluate.py  humaneval.py  list_tasks.py  prepare.py  registry.py  templates.py  types.py  utils.py
src/coder_eval/datasets/: __init__.py  humaneval.py  mbpp.py
src/coder_eval/docker/: Dockerfile
src/coder_eval/evaluators/: __init__.py  humaneval_eval.py  mbpp_eval.py
tests/: test_evaluate.py  test_humaneval_eval.py  test_prepare.py  test_utils.py
